creusot/tests/should_succeed/bug/195.rs
extern crate creusot_contracts;
use creusot_contracts::*;
#[requires(exampleParameter == exampleParameter)]
fn example(exampleParameter: bool) {}
