creusot/tests/should_fail/logic_prophetic_impl.rs
extern crate creusot_contracts;
use creusot_contracts::*;

trait T {
    #[logic]
    fn f();
}

impl T for () {
    #[logic(prophetic)]
    fn f() {
        ()
    }
}
